# Uttate-writer

./: .env.example  .gitignore  NOTICE  README.md  agent.md  export-diff.ps1  keyconfig.yaml  project-b-api.md  project.md  pyproject.toml  run.bat  uttate_launcher.py
docs/: API_PREPROCESSING_FLOW.md  CONVERSION_MODULARIZATION.md  DATASET_BUILDER.md  GEMINI_PROMPT_AND_API_FLOW.md  IMPLEMENTATION_PLAN.md  MAIN_MERGE_PREP.md  NOT_LOCAL_MODULARIZATION_PLAN.md  PROJECT_SCOPE.md  REFACTORING_PLAN.md
examples/: dataset_seeds.sample.jsonl
scripts/: bootstrap.ps1  build-exe.ps1  lint.ps1  run.ps1  test.ps1
src/uttate/: __init__.py  __main__.py  app.py  config.py  input_rules.py  keymap.py  logging_config.py  main.py  models.py  protected_input.py
src/uttate/addons/: __init__.py  dataset_builder.py  dataset_collection.py  dataset_curator.py
src/uttate/conversion/: __init__.py  core.py  direct.py  local_ai.py  (+1 more)
tests/: test_app.py  test_config.py  test_conversion_modules.py  test_dataset_builder.py  test_dataset_collection.py  test_dataset_curator.py  test_keymap.py  test_lmstudio_provider.py  test_local_ai_conversion.py  test_local_ai_preprocessing.py  test_logging_config.py  test_m2_ui.py  test_models.py  test_normalizer.py  test_openai_compatible_provider.py  test_prompt_registry.py  test_protected_input.py  test_provider_panel.py  test_providers.py  test_response_parser.py  test_settings_prompts.py  test_theme_management.py
themes/: base.css  user-custom.css
themes/default/: theme.css
themes/glass/: theme.css
themes/paper/: theme.css  theme.json
(+32 files in other folders)
