[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "uttate-writer"
version = "0.1.0"
description = "AI-assisted Japanese rough-input editor"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28,<1",
    "PySide6>=6.8,<7",
]

[project.scripts]
uttate = "uttate.main:main"
uttate-dataset = "uttate.addons.dataset_builder:main"
uttate-curate = "uttate.addons.dataset_curator:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<10",
    "pytest-qt>=4.4,<5",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uttate"]

[tool.pytest.ini_options]
addopts = "-ra"
qt_api = "pyside6"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
